--- a/build.gradle
+++ b/build.gradle
@@ -37,7 +37,7 @@ tasks.withType(JavaCompile) {
 
 tasks.withType(Test) {
     useJUnitPlatform()
-
+    systemProperties(System.getProperties())
     testLogging {
         lifecycle {
             events "started", "skipped", "failed", "standard_error", "standard_out"
@@ -47,5 +47,6 @@ tasks.withType(Test) {
 }
 
 test {
+
     useJUnitPlatform()
 }
