--- a/build.gradle
+++ b/build.gradle
@@ -25,9 +25,10 @@ dependencies {
     testImplementation (
             'com.codeborne:selenide:6.4.0',
             'io.qameta.allure:allure-selenide:2.17.3',
-            "org.junit.jupiter:junit-jupiter:5.8.2",
-            "org.slf4j:slf4j-simple:1.7.36",
-            "com.github.javafaker:javafaker:1.0.2"
+            'org.junit.jupiter:junit-jupiter:5.8.2',
+            'org.slf4j:slf4j-simple:1.7.36',
+            'com.github.javafaker:javafaker:1.0.2',
+            'org.aeonbits.owner:owner:1.0.4'
     )
 }
 
